--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -29,7 +29,10 @@
           ><img src="./imgs/6.svg" alt="Candy 6" class="candy" id="candy6"
         /></a>
         <a href="../entry7/entry7.html"
-          ><img src="./imgs/7.svg" alt="Candy 6" class="candy" id="candy7"
+          ><img src="./imgs/7.svg" alt="Candy 7" class="candy" id="candy7"
+        /></a>
+        <a href="../entry8/entry8.html"
+          ><img src="./imgs/8.svg" alt="Candy 8" class="candy" id="candy8"
         /></a>
       </div>
       <h1 class="title">GRAB SOME <br />CANDIES!</h1>
