--- a/entries/entry9/entry9.html
+++ b/entries/entry9/entry9.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-    <script src="p5.riso.js"></script>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Too much Ads!</title>
+    <title>Happy Index</title>
+    <link rel="stylesheet" href="style999.css" />
   </head>
   <body>
-<h1>Too much candy papers</h1>
-    <script src="sketch9.js"></script>
+    <div class="navbar">
+      <a href="../homepage/home.html">
+        <img src="./imgs/nav.svg" alt="Home" class="nav-logo" />
+      </a>
+    </div>
+    
+    <div class="candy-container">
+      <!-- 糖果图片 -->
+      <img src="./imgs/cherry.png" alt="Candy" class="candy" />
+
+      <!-- 悬停显示的字符 -->
+      <span class="emotion" style="--i: 1">Joy</span>
+      <span class="emotion" style="--i: 2">Pleasure</span>
+      <span class="emotion" style="--i: 3">Sweetness</span>
+      <span class="emotion" style="--i: 4">Satisfaction</span>
+    </div>
   </body>
 </html>
