--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -34,6 +34,9 @@
         <a href="../entry8/entry8.html"
           ><img src="./imgs/8.svg" alt="Candy 8" class="candy" id="candy8"
         /></a>
+        <a href="../entry9/entry9.html"
+          ><img src="./imgs/9.svg" alt="Candy 9" class="candy" id="candy9"
+        /></a>
       </div>
       <h1 class="title">GRAB SOME <br />CANDIES!</h1>
     </div>
