--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -37,6 +37,9 @@
         <a href="../entry9/entry9.html"
           ><img src="./imgs/9.svg" alt="Candy 9" class="candy" id="candy9"
         /></a>
+        <a href="../entry10/entry10.html"
+          ><img src="./imgs/10.svg" alt="Candy 10" class="candy" id="candy10"
+        /></a>
       </div>
       <h1 class="title">GRAB SOME <br />CANDIES!</h1>
     </div>
