--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flip It</title>
     <link rel="stylesheet" href="style10.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/9.svg">
   </head>
   <body>
     <div class="navbar">
