--- a/entries/entry11/entry11.html
+++ b/entries/entry11/entry11.html
@@ -8,12 +8,29 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Too much Ads!</title>
-    
+    <title>A Life Unfolds</title>
+    <link rel="stylesheet" href="style11.css" />
   </head>
-  <body>
-    <h1>Too much candy papers</h1>
 
-    <script src="sketch11.js"></script>
+  <body>
+    <div class="navbar">
+      <a href="../homepage/home.html">
+        <img src="./imgs/nav.png" alt="Home" class="nav-logo" />
+      </a>
+    </div>
+    <header>
+      <h1>From Smooth to Crumpled: A Life Unfolds</h1>
+      <p class="intro">
+        "Every candy wrapper was once a smooth, pristine surface. In the moment
+        it’s crumpled between fingers, its story begins to unfold. Every wrinkle
+        is a mark left by time."
+      </p>
+    </header>
+
+    <main>
+      <script src="sketch11.js"></script>
+    </main>
+
+    
   </body>
 </html>
