--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -40,6 +40,9 @@
         <a href="../entry10/entry10.html"
           ><img src="./imgs/10.svg" alt="Candy 10" class="candy" id="candy10"
         /></a>
+        <a href="../entry11/entry11.html"
+          ><img src="./imgs/11.png" alt="Candy 11" class="candy" id="candy11"
+        /></a>
       </div>
       <h1 class="title">GRAB SOME <br />CANDIES!</h1>
     </div>
