homepage grab developed

--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -46,5 +46,10 @@
       </div>
       <h1 class="title">GRAB SOME <br />CANDIES!</h1>
     </div>
+
+    <!-- this is where we link to the jquery library and our main.js file -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
