--- a/entries/homepage/home.html
+++ b/entries/homepage/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crab some Candies!</title>
     <link rel="stylesheet" href="style_home.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/home.svg">
   </head>
   <body>
     <div class="container">
