--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -6,7 +6,14 @@
     <title>What makes up Candy</title>
   </head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="./imgs/1.svg">
   <body>
+    <div class="navbar">
+      <a href="../homepage/home.html">
+        <img src="./imgs/nav.svg" alt="Home" class="nav-logo" />
+      </a>
+    </div>
+    
     <div>
       <h1 >What makes up candy ?</h1>
     </div>
@@ -90,7 +97,6 @@
     <div class="blue">
       <p style="color: DodgerBlue">
         Enjoy some Sweet ! <br />
-        ⁎⁎⁎⁎⁎⁎⁎(⁎⁍̴̛ᴗ⁍̴̛⁎)⁎⁎⁎⁎⁎⁎⁎
       </p>
     </div>
 
