--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Candy Shop</title>
     <link rel="stylesheet" href="style2.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/2.svg">
   </head>
 
   <body>
