--- a/entries/entry3/entry3_01.html
+++ b/entries/entry3/entry3_01.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dum Dums</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="icon" type="image/x-icon" href="./imgs/3.svg">
   </head>
   <body>
     <div class="intro">
         Dum Dums
     </div>
+
+    <div class="nav-icon">
+      <a href="../homepage/home.html">
+        <img src="./imgs/nav.svg" alt="nav" class="gummy-nav">
+      </a>
+    </div>
+    
     <div class="shell">
       <div class="image" style="background-image: url(./imgs/1/dd.png)"></div>
       <div class="heading"">
