--- a/entries/entry3/entry3_03.html
+++ b/entries/entry3/entry3_03.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gummy Bears</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="icon" type="image/x-icon" href="./imgs/3.svg">
   </head>
   <body>
     <div class="intro">
