--- a/entries/entry4/entry4_01.html
+++ b/entries/entry4/entry4_01.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>What's hidden?</title>
     <link rel="stylesheet" href="style4.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/4.svg">
   </head>
   <body>
     <div class="grid-container">
