--- a/entries/entry5/entry5_01.html
+++ b/entries/entry5/entry5_01.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Day With Candy</title>
     <link rel="stylesheet" href="style5.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/5.svg">
   </head>
   <body>
     <div class="container">
