--- a/entries/entry5/entry5_03.html
+++ b/entries/entry5/entry5_03.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Afternoon</title>
     <link rel="stylesheet" href="style5.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/5.2.svg">
   </head>
   <body>
     <div class="container">
