--- a/entries/entry7/entry7.html
+++ b/entries/entry7/entry7.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halloween Candy</title>
     <link rel="stylesheet" href="style7.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/icon.svg" />
   </head>
   <body>
     <div class="navbar">
