--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obesity</title>
     <link rel="stylesheet" href="style8.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/8.svg" />
   </head>
   <body>
     <div class="navbar">
