--- a/entries/entry11/entry11.html
+++ b/entries/entry11/entry11.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Life Unfolds</title>
     <link rel="stylesheet" href="style11.css" />
+    <link rel="icon" type="image/x-icon" href="./imgs/11.png">
   </head>
 
   <body>
