--- a/entries/entry4/entry4_01.html
+++ b/entries/entry4/entry4_01.html
@@ -8,6 +8,11 @@
     <link rel="icon" type="image/x-icon" href="./imgs/4.svg">
   </head>
   <body>
+    <div class="navbar">
+      <a href="../homepage/home.html">
+        <img src="./imgs/4.svg" alt="Home" class="nav-logo" />
+      </a>
+    </div>
     <div class="grid-container">
       <!-- 生成24个格子 -->
       <div class="grid-item2">Let's</div>
