--- a/entries/entry4/entry4_03.html
+++ b/entries/entry4/entry4_03.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>What's hidden?</title>
     <link rel="stylesheet" href="style4.css" />
-    <link rel="icon" type="image/x-icon" href="./imgs/4.svg">
+    <link rel="icon" type="image/x-icon" href="./imgs/4.svg" />
   </head>
   <body>
     <div class="navbar">
@@ -46,7 +46,7 @@
       </div>
       <div class="grid-item2">what</div>
       <div class="grid-item4">
-        <div class="content-normal" style="color: #1E90FF">Squishy</div>
+        <div class="content-normal" style="color: #1e90ff">Squishy</div>
         <div class="content-hover">
           <a href="../homepage/home.html"
             ><img src="./imgs/candy3.svg" alt="bonus candy"
