--- a/entries/entry9/entry9.html
+++ b/entries/entry9/entry9.html
@@ -3,25 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Index</title>
     <link rel="stylesheet" href="style9.css" />
+    <title>Falling Sweetness</title>
   </head>
   <body>
+    
     <div class="navbar">
       <a href="../homepage/home.html">
         <img src="./imgs/nav.svg" alt="Home" class="nav-logo" />
       </a>
     </div>
 
-    <div class="candy-container">
-      <!-- 糖果图片 -->
-      <img src="./imgs/cherry.png" alt="Candy" class="candy" />
-
-      <!-- 悬停显示的字符 -->
-      <span class="emotion" style="--i: 1">Joy</span>
-      <span class="emotion" style="--i: 2">Pleasure</span>
-      <span class="emotion" style="--i: 3">Sweetness</span>
-      <span class="emotion" style="--i: 4">Satisfaction</span>
+    <div class="container">
+      <h1 class="title">Sweet Escapes</h1>
+      <div class="content">
+        <p>
+          As candy cascades down, disappearing into the void, it mirrors the
+          fleeting nature of our pleasures. Sweetness, a universal delight,
+          serves as both a momentary escape and a deliberate reward. But how do
+          we distinguish between indulgence as a form of evasion and as a
+          meaningful act of self-care?
+        </p>
+        <p>
+          In the chaos of life, we often seek solace in simple joys: a sugary
+          treat, a quick distraction, a burst of dopamine. These moments of
+          sweetness can feel like a sanctuary, a brief respite from the weight
+          of reality. Yet, when pursued as mere avoidance, the sweetness fades
+          into an endless loop of gratification without growth—a cycle that
+          numbs more than it nourishes.
+        </p>
+        <p>
+          Conversely, sweetness can be intentional. A carefully chosen candy can
+          mark celebration, success, or self-appreciation. It becomes a gift to
+          oneself, a token of balance, reminding us that pleasure is not the
+          enemy but an ally when approached with mindfulness. The same
+          candy—whether a reward or a retreat— reveals the power of intention.
+          Sweetness, like all pleasures, is a double-edged sword. Do we consume
+          it to escape or to enrich? As the candies fall, the question lingers:
+          is your sweetness fleeting, or does it carry weight?
+        </p>
+      </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
