--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -14,7 +14,7 @@
       </a>
     </div>
     <nav>
-      <button id="flipButton">Flip Tiles</button>
+      <button id="flipButton">Flip it</button>
     </nav>
 
     <section class="board"></section>
